feat: send basic email for report
OCD-4437

--- a/chpl/chpl-resources/src/main/resources/email.properties
+++ b/chpl/chpl-resources/src/main/resources/email.properties
@@ -193,6 +193,11 @@ listingValidationReport.heading=CHPL Listing Validation Report
 listingValidationReport.paragraph1.heading=Report contains data for the following ONC-ACBs
 listingValidationReport.paragraph2.body=%s validation errors found.
 
+#Updated Listing Status email properties
+updatedListingStatusReport.fileName=updated-listing_status_report
+updatedListingStatusReport.subject=CHPL Updated Listing Status Report
+updatedListingStatusReport.heading=CHPL Updated Listing Status Report
+
 #Real World Testing Upload email properties
 email_styles=table.blueTable {\
         background-color: #EEEEEE;\
