feat: Remove summary statistics CSV attachment
[#OCD-4329]

--- a/chpl/chpl-resources/src/main/resources/email.properties
+++ b/chpl/chpl-resources/src/main/resources/email.properties
@@ -71,10 +71,8 @@ ban on the Developer.</p>
 triggerDeveloperBan.directReviewsNotAvailable=<p>Direct Reviews are not currently available so the Direct \
 Review Nonconformity counts above may not be accurate.</p>
 
-#chpl-app Statistics properties
-summaryEmailName=summaryStatistics.csv
+#Summary Statistics properties
 summaryEmailSubject=CHPL - Summary Statistics Report
-summaryEmailPeriodInDays=7
 
 #questionable activity email properties
 questionableActivityReportFilename=questionable-activity
