fix: add missing error message
OCD-4446

--- a/chpl/chpl-resources/src/main/resources/errors.properties
+++ b/chpl/chpl-resources/src/main/resources/errors.properties
@@ -272,6 +272,9 @@ listing.criteria.privacyAndSecurityFrameworkNotApplicable=Privacy and Security F
 listing.criteria.missingPrivacySecurityFramework=Privacy and Security Framework is required for certification %s.
 listing.criteria.invalidPrivacySecurityFramework=Certification %s contains Privacy and Security Framework value '%s' which must match one of %s.
 
+#code sets errors
+listing.criteria.missingCodeSets=Code Sets Updated is required for certification %s.
+
 #additional software errors
 listing.criteria.additionalSoftwareNotApplicable=Additional Software is not applicable for the criterion %s. It has been removed.
 listing.criteria.invalidAdditionalSoftware=No CHPL product was found matching additional software %s for %s.
