feat: Notify CHPL team when future cert status feature is used
[#OCD-4452]

--- a/chpl/chpl-resources/src/main/resources/email.properties
+++ b/chpl/chpl-resources/src/main/resources/email.properties
@@ -399,3 +399,9 @@ observation.notification.subscribedItemFooter=For the latest information about t
 listingDetailsUrlPart=/#/listing/%s
 developerDetailsUrlPart=/#/organizations/developers/%s
 
+#Future certification status internal email
+futureCertificationStatusUsed.subject=Future Certification Status Feature Used
+futureCertificationStatusUsed.body=<h2>Future Certification Status Feature Used on %s </h2> \
+<h4>Activity performed by %s </p> \
+<p>%s (ID %s) was set to have a new certification status on %s.</p> \
+<p>The activity ID for this action is %s.</p>
