--- a/chpl/chpl-resources/src/main/resources/environment.properties
+++ b/chpl/chpl-resources/src/main/resources/environment.properties
@@ -26,6 +26,7 @@ basePath=/rest
 downloadFolderPath=SECRET
 keyLocation=SECRET
 internalErrorEmailRecipients=SECRET
+internalFutureCertificationStatusEmailRecipients=SECRET
 server.environment=non-production
 response.returnDeprecatedFields=true
 
