feat: add validation when editing code set date
OCD-4482

--- a/chpl/chpl-resources/src/main/resources/errors.properties
+++ b/chpl/chpl-resources/src/main/resources/errors.properties
@@ -1091,3 +1091,8 @@ standard.delete.listingsExist=This Standard is attested to by %s listing%s
 standard.edit.notFoundRule=Rule is not found
 
 codeSetDate.notFound=Code Set Date not found
+codeSetDate.edit.emptyRequiredDay=Required Day is required
+codeSetDate.edit.noCriteria=A Code Set Date requires at least one Criterion associated with it
+codeSetDate.edit.duplicate=Required Day matches an existing %s
+codeSetDate.edit.deletedCriteria.listingsExist=This Code Set Date and Criteria %s is attested to by %s Listing%s
+codeSetDate.delete.listingsExist=This Code Set Date is attested to by %s listing%s
