fix: add missing change to errors.properties
OCD-4482

--- a/chpl/chpl-resources/src/main/resources/errors.properties
+++ b/chpl/chpl-resources/src/main/resources/errors.properties
@@ -1096,3 +1096,4 @@ codeSetDate.edit.noCriteria=A Code Set Date requires at least one Criterion asso
 codeSetDate.edit.duplicate=Required Day matches an existing %s
 codeSetDate.edit.deletedCriteria.listingsExist=This Code Set Date and Criteria %s is attested to by %s Listing%s
 codeSetDate.delete.listingsExist=This Code Set Date is attested to by %s listing%s
+codeSetDate.notAllowed=Code Set Dates are not valid for Criteria %s
