refactor: CodeSetDate -> CodeSet
OCD-4482

--- a/chpl/chpl-resources/src/main/resources/errors.properties
+++ b/chpl/chpl-resources/src/main/resources/errors.properties
@@ -1090,11 +1090,11 @@ standard.edit.deletedCriteria.listingsExist=This Standard and Criteria %s is att
 standard.delete.listingsExist=This Standard is attested to by %s listing%s
 standard.edit.notFoundRule=Rule is not found
 
-codeSetDate.notFound=Code Set Date not found
-codeSetDate.edit.emptyRequiredDay=Required Day is required
-codeSetDate.edit.noCriteria=A Code Set Date requires at least one Criterion associated with it
-codeSetDate.edit.duplicate=Required Day matches an existing %s
-codeSetDate.edit.deletedCriteria.listingsExist=This Code Set Date and Criteria %s is attested to by %s Listing%s
-codeSetDate.delete.listingsExist=This Code Set Date is attested to by %s listing%s
-codeSetDate.notAllowed=Code Set Dates are not valid for Criteria %s
-codeSetDate.notAllowedForCriteria=Code Set Date %s is not valid for Criteria %s
+codeSet.notFound=Code Set not found
+codeSet.edit.emptyRequiredDay=Required Day is required
+codeSet.edit.noCriteria=A Code Set requires at least one Criterion associated with it
+codeSet.edit.duplicate=Required Day matches an existing %s
+codeSet.edit.deletedCriteria.listingsExist=This Code Set and Criteria %s is attested to by %s Listing%s
+codeSet.delete.listingsExist=This Code Set is attested to by %s listing%s
+codeSet.notAllowed=Code Set are not valid for Criteria %s
+codeSet.notAllowedForCriteria=Code Set %s is not valid for Criteria %s
