--- a/chpl/chpl-resources/src/main/resources/errors.properties
+++ b/chpl/chpl-resources/src/main/resources/errors.properties
@@ -317,14 +317,13 @@ listing.criteria.functionalityTestedUnavailable=The functionality tested %s on t
 #standard errors
 listing.criteria.standardNotApplicable=Standard is not applicable for the criterion %s. It has been removed.
 listing.criteria.invalidStandard=Certification %s contains invalid Standard '%s'.
-listing.criteria.invalidStandardId=Certification %s contains invalid Standard ID '%s'.
 listing.criteria.missingStandardName=There was no Standard name found for certification criteria %s.
 listing.criteria.standardCriterionMismatch=In Criteria %s, Standard %s is for Criteria %s and is not valid for Criteria %s. The invalid Standard has been removed.
 listing.criteria.standardNotFoundAndRemoved=Criteria %s contains an invalid Standard '%s'. It has been removed from the pending listing.
 listing.criteria.standardUnavailable=The Standard %s on the criterion %s is unavailable for this listing.
 listing.criteria.standardGroupNotSelected=In Criteria %s, at least one of the following Standards must be selected: %s
 listing.criteria.standardNotRemovable=The Standard %s on the criterion %s can not be removed.
-
+listing.criteria.baselineStandardsAdded=Required standards were added to %s.
 
 #conformance method / test procedure errors
 listing.criteria.testProcedureNotApplicable=Test Procedures are not applicable for the criterion %s. They have been removed.
