--- a/chpl/chpl-resources/src/main/resources/environment.properties
+++ b/chpl/chpl-resources/src/main/resources/environment.properties
@@ -331,3 +331,7 @@ downloadInactiveMinute=0
 downloadActiveHour=16
 downloadActiveMinute=0
 #######################################################
+
+######      Updated Criteria Status Report     ######
+updatedCriteriaStatusReportTemplate=UpdatedCriteriaStatusReport.xlsx
+####################################
