feat: add formatted email
OCD-4438

--- a/chpl/chpl-resources/src/main/resources/email.properties
+++ b/chpl/chpl-resources/src/main/resources/email.properties
@@ -399,3 +399,7 @@ observation.notification.subscribedItemFooter=For the latest information about t
 listingDetailsUrlPart=/#/listing/%s
 developerDetailsUrlPart=/#/organizations/developers/%s
 
+#Updated Criteria Status Report email
+updatedCriteriaStatusReport.subject=Updated Criteria Status Report
+updatedCriteriaStatusReport.body=Please see the attached Excel spreadsheet.
+
