feat!: Add Code Set functionality to selected criteria
OCD-4482

--- a/chpl/chpl-resources/src/main/resources/errors.properties
+++ b/chpl/chpl-resources/src/main/resources/errors.properties
@@ -1089,3 +1089,14 @@ standard.edit.duplicate=Regulatory Text Citation and Value matches an existing %
 standard.edit.deletedCriteria.listingsExist=This Standard and Criteria %s is attested to by %s Listing%s
 standard.delete.listingsExist=This Standard is attested to by %s listing%s
 standard.edit.notFoundRule=Rule is not found
+
+codeSet.notFound=Code Set not found
+codeSet.edit.emptyRequiredDay=Required Day is required
+codeSet.edit.noCriteria=A Code Set requires at least one Criterion associated with it
+codeSet.edit.duplicate=Required Day matches an existing %s
+codeSet.edit.deletedCriteria.listingsExist=This Code Set and Criteria %s is attested to by %s Listing%s
+codeSet.delete.listingsExist=This Code Set is attested to by %s listing%s
+codeSet.notAllowed=Code Set are not valid for Criteria %s
+codeSet.notAllowedForCriteria=Code Set %s is not valid for Criteria %s
+codeSet.doesNotExist=Code Set %s for Criterion %s does not exist.
+codeSet.notAvailableBasedOnStartDay=Code Set %s for Criterion %s has a Start Day of %s and is not available.
