--- a/chpl/chpl-resources/src/main/resources/errors.properties
+++ b/chpl/chpl-resources/src/main/resources/errors.properties
@@ -321,6 +321,7 @@ listing.criteria.missingStandardName=There was no Standard name found for certif
 listing.criteria.standardCriterionMismatch=In Criteria %s, Standard %s is for Criteria %s and is not valid for Criteria %s. The invalid Standard has been removed.
 listing.criteria.standardNotFoundAndRemoved=Criteria %s contains an invalid Standard '%s'. It has been removed from the pending listing.
 listing.criteria.standardUnavailable=The Standard %s on the criterion %s is unavailable for this listing.
+listing.criteria.standardNotSelected=The criterion %s requires Standard %s.
 listing.criteria.standardGroupNotSelected=In Criteria %s, at least one of the following Standards must be selected: %s
 listing.criteria.standardNotRemovable=The Standard %s on the criterion %s can not be removed.
 listing.criteria.baselineStandardsAdded=Required standards were added to %s.
