feat: add server side validation of user information
OCD-4532

--- a/chpl/chpl-resources/src/main/resources/errors.properties
+++ b/chpl/chpl-resources/src/main/resources/errors.properties
@@ -1100,3 +1100,9 @@ codeSet.notAllowed=Code Set are not valid for Criteria %s
 codeSet.notAllowedForCriteria=Code Set %s is not valid for Criteria %s
 codeSet.doesNotExist=Code Set %s for Criterion %s does not exist.
 codeSet.notAvailableBasedOnStartDay=Code Set %s for Criterion %s has a Start Day of %s and is not available.
+
+cognito.user.create.fullName.empty=Full Name is required
+cognito.user.create.phoneNumber.empty=Phone Number is required
+cognito.user.create.phoneNumber.invalid=Phone Number is invalid
+cognito.user.create.email.empty=Email Address is required
+cognito.user.create.email.invalid=Email Address is invalid 
