feat!: Support uploading and confirming Code Sets on a listing
I decided to mainly give warnings and remove the code sets for the user
when an invalid one was detected. I made this decision because in most
cases, we don't give the user a way to remove them in the UI. If they
have entered a code set that doesn't exist or that hasn't become
available yet they have no way to remove them. So I'm giving a warning
and removing it for them.

Added validation for duplicate code sets.

Also added validation for a code set that is required (today is after
it's required date) but it's not found on the listing. This is the one
case where we give the user an error and force them to do something
because they can and should.

Commit includes unit tests.

[#OCD-4490]

--- a/chpl/chpl-resources/src/main/resources/errors.properties
+++ b/chpl/chpl-resources/src/main/resources/errors.properties
@@ -1096,7 +1096,9 @@ codeSet.edit.noCriteria=A Code Set requires at least one Criterion associated wi
 codeSet.edit.duplicate=Required Day matches an existing %s
 codeSet.edit.deletedCriteria.listingsExist=This Code Set and Criteria %s is attested to by %s Listing%s
 codeSet.delete.listingsExist=This Code Set is attested to by %s listing%s
-codeSet.notAllowed=Code Set are not valid for Criteria %s
-codeSet.notAllowedForCriteria=Code Set %s is not valid for Criteria %s
-codeSet.doesNotExist=Code Set %s for Criterion %s does not exist.
-codeSet.notAvailableBasedOnStartDay=Code Set %s for Criterion %s has a Start Day of %s and is not available.
+listing.criteria.codeSetNotApplicable=Code Sets are not applicable for Criterion %s. They have been removed.
+codeSet.notAllowedForCriteria=Code Set %s is not valid for Criterion %s. It has been removed.
+codeSet.doesNotExist=Code Set %s for Criterion %s does not exist. It has been removed.
+codeSet.notAvailableBasedOnStartDay=Code Set %s for Criterion %s has a Start Day of %s and is not available. It has been removed.
+listing.criteria.codeSetRequired=Code Set %s is required for Criterion %s beginning on %s but was not found.
+listing.criteria.duplicateCodeSetName=Certification %s contains duplicate Code Set: '%s'. The duplicates have been removed.
