feat!: Support RWT url and date fields in listing upload
[#OCD-4490]

--- a/chpl/chpl-resources/src/main/resources/errors.properties
+++ b/chpl/chpl-resources/src/main/resources/errors.properties
@@ -641,9 +641,11 @@ listing.criteria.duplicateAdditionalSoftwareNonCP=Certification %s contains dupl
 listing.realWorldTesting.notEligible=Listing is not eligible for Real World Testing.
 listing.realWorldTesting.plans.url.required=Real World Testing Plans URL is required.
 listing.realWorldTesting.plans.url.invalid=Real World Testing Plans URL is not a well formed URL.
+listing.realWorldTesting.plans.checkDate.invalid=Real World Testing Plans Check Date '%s' is not a valid date format. Please enter date as yyyy-MM-dd.
 listing.realWorldTesting.plans.checkDate.required=Real World Testing Plans Check Date is required.
 listing.realWorldTesting.results.url.required=Real World Testing Results URL is required.
 listing.realWorldTesting.results.url.invalid=Real World Testing Results URL is not a well formed URL.
+listing.realWorldTesting.results.checkDate.invalid=Real World Testing Results Check Date '%s' is not a valid date format. Please enter date as yyyy-MM-dd.
 listing.realWorldTesting.results.checkDate.required=Real World Testing Results Check Date is required.
 listing.realWorldTesting.eligibilityYearNotUpdatable=Real World Eligibility Year cannot be updated.
 
