feat!: Add Criteria Update report by Criteria Details (Attribute)
OCD-4438

--- a/chpl/chpl-resources/src/main/resources/email.properties
+++ b/chpl/chpl-resources/src/main/resources/email.properties
@@ -399,6 +399,10 @@ observation.notification.subscribedItemFooter=For the latest information about t
 listingDetailsUrlPart=/#/listing/%s
 developerDetailsUrlPart=/#/organizations/developers/%s
 
+#Updated Criteria Status Report email
+updatedCriteriaStatusReport.subject=Updated Criteria Status Report
+updatedCriteriaStatusReport.body=Please see the attached Excel spreadsheet.
+
 #Future certification status internal email
 futureCertificationStatusUsed.subject=Future Certification Status Feature Used
 futureCertificationStatusUsed.body=<h2>Future Certification Status Feature Used on %s </h2> \
