test: Add unit tests for new dev search classes
[#OCD-3907]

--- a/chpl/chpl-resources/src/main/resources/errors.properties
+++ b/chpl/chpl-resources/src/main/resources/errors.properties
@@ -799,8 +799,8 @@ search.orderBy.invalid=Order by parameter '%s' is invalid. Value must be one of 
 # developer search validation errors
 search.developer.statuses.invalid=Could not find a developer status with value '%s'. Value must be one of %s.
 search.developer.decertificationDate.invalid=Could not parse '%s' as a decertification date in the format %s.
-search.developer.missingActiveListingsOperator=Multiple active listing filters were found without a search operator (AND/OR). A search operator is required.
-search.developer.activeListingsSearchOption.invalid=No active listing search option matches '%s'. Values must be one of %s.
+search.developer.missingActiveListingsOperator=Multiple active listings filters were found without a search operator (AND/OR). A search operator is required.
+search.developer.activeListingsSearchOption.invalid=No active listings search option matches '%s'. Values must be one of %s.
 
 # subscription search validation errors
 search.subscriptions.subject.invalid=No subscription subject with the value '%s' exists. Value must be one of %s.
