--- a/chpl/chpl-resources/src/main/resources/errors.properties
+++ b/chpl/chpl-resources/src/main/resources/errors.properties
@@ -357,6 +357,7 @@ listing.criteria.testStandardIdNotFound=Criteria %s contains a test standard ID 
 listing.criteria.optionalStandardNotFound=Criteria %s contains an optional standard '%s' which does not exist.
 listing.criteria.testStandardNotAllowed=Criteria %s contains a test standard '%s' which is not allowed and should be removed.
 listing.criteria.optionalStandard.invalidCriteria=Optional Standard %s is not valid for criteria %s.
+listing.criteria.optionalStandardFuzzyMatch=Optional Standard '%s' was changed to '%s' for criteria %s.
 
 #SVAP Errors
 listing.criteria.svapsNotApplicable=Standards Version Advancement Process(es) are not applicable for the criterion %s. They have been removed.
