feat: Remove optional standards for the user when possible, give warning
[#OCD-4544]

--- a/chpl/chpl-resources/src/main/resources/errors.properties
+++ b/chpl/chpl-resources/src/main/resources/errors.properties
@@ -354,9 +354,9 @@ listing.criteria.missingOptionalStandardName=There was no optional standard name
 listing.criteria.badTestStandard=Could not process Test Standard '%s'.
 listing.criteria.testStandardNotFound=Criteria %s contains a test standard '%s' which does not exist for edition %s.
 listing.criteria.testStandardIdNotFound=Criteria %s contains a test standard ID '%s' which does not exist for edition %s.
-listing.criteria.optionalStandardNotFound=Criteria %s contains an optional standard '%s' which does not exist.
+listing.criteria.optionalStandardNotFoundAndRemoved=Criteria %s contains an optional standard '%s' which does not exist. It has been removed.
 listing.criteria.testStandardNotAllowed=Criteria %s contains a test standard '%s' which is not allowed and should be removed.
-listing.criteria.optionalStandard.invalidCriteria=Optional Standard %s is not valid for criteria %s.
+listing.criteria.optionalStandard.invalidCriteria=Optional Standard %s is not valid for criteria %s. It has been removed.
 listing.criteria.optionalStandardFuzzyMatch=Optional Standard '%s' was changed to '%s' for criteria %s.
 
 #SVAP Errors
