feat: add "environment" group to user when creating a Cognito user
OCD-4561

--- a/chpl/chpl-resources/src/main/resources/environment.properties
+++ b/chpl/chpl-resources/src/main/resources/environment.properties
@@ -320,6 +320,7 @@ cognito.userPoolId=SECRET
 cognito.userPoolClientSecret=SECRET
 cognito.clientId=SECRET
 cognito.tokenizezRsaKeyUrl=https://cognito-idp.%s.amazonaws.com/%s/.well-known/jwks.json
+cognito.environment.groupName=SECRET
 ##############################################
 
 ######  Dynamic Scheduling of Download Files     ######
