feat: Allow combining of submitted/published attestation dev searches
[#OCD-3907]

--- a/chpl/chpl-resources/src/main/resources/errors.properties
+++ b/chpl/chpl-resources/src/main/resources/errors.properties
@@ -798,6 +798,8 @@ search.developer.statuses.invalid=Could not find a developer status with value '
 search.developer.decertificationDate.invalid=Could not parse '%s' as a decertification date in the format %s.
 search.developer.missingActiveListingsOperator=Multiple active listings filters were found without a search operator (AND/OR). A search operator is required.
 search.developer.activeListingsSearchOption.invalid=No active listings search option matches '%s'. Values must be one of %s.
+search.developer.missingAttestationsOperator=Multiple attestations filters were found without a search operator (AND/OR). A search operator is required.
+search.developer.attestationsSearchOption.invalid=No attestations search option matches '%s'. Values must be one of %s.
 
 # subscription search validation errors
 search.subscriptions.subject.invalid=No subscription subject with the value '%s' exists. Value must be one of %s.
