feat!: Notify subscribers about more listing updates
RWT Plans URL Changed
RWt Results URL changed
Service Base URL List Changed

[#OCD-4563]

--- a/chpl/chpl-resources/src/main/resources/lookup.properties
+++ b/chpl/chpl-resources/src/main/resources/lookup.properties
@@ -17,6 +17,9 @@ subscription.objectType.product=3
 subscription.subject.certificationStatusChanged=1
 subscription.subject.certificationCriteriaAdded=2
 subscription.subject.certificationCriteriaRemoved=3
+subscription.subject.rwtPlansUrlChanged=4
+subscription.subject.rwtResultsUrlChanged=5
+subscription.subject.serviceBaseUrlListChanged=6
 subscription.consolidationMethod.daily=1
 subscription.consolidationMethod.weekly=2
 subscription.subscriberStatus.pending=1
