feat: Correctly parse arguments from POST request and send emails
[#OCD-4522]

--- a/chpl/chpl-resources/src/main/resources/email.properties
+++ b/chpl/chpl-resources/src/main/resources/email.properties
@@ -356,6 +356,11 @@ developer.missingAttestationChangeRequest.report.subject=Semi-annual Attestation
 developer.missingAttestationChangeRequest.report.salutation=Hello %s,
 developer.missingAttestationChangeRequest.report.paragraph=Emails were sent to the following developers:
 
+#Developer Messaging Status Email
+developer.messaging.report.subject=Developer Messages Sent Report
+developer.messaging.report.salutation=Hello %s,
+developer.messaging.report.paragraph=Emails were sent to the following developers:
+
 #URL Uptime Report
 serviceBaseUrlListUptime.report.filename=Service_Base_URL_List_Uptime
 serviceBaseUrlListUptime.report.subject=Service Base URL List Uptime Report
