--- a/chpl/chpl-service/pom.xml
+++ b/chpl/chpl-service/pom.xml
@@ -26,7 +26,7 @@
       <org.apache.httpcomponents.version>4.5.14</org.apache.httpcomponents.version>
       <poi.version>5.2.3</poi.version>
       <postgresql.version>42.7.2</postgresql.version>
-      <quartz.version>2.4.0-rc2</quartz.version>
+      <quartz.version>2.5.0-rc1</quartz.version>
       <zxcvbn.version>1.7.0</zxcvbn.version>
       <spring.data.redis.version>3.1.0</spring.data.redis.version>
       <redisson.version>3.21.3</redisson.version>
@@ -99,13 +99,11 @@
             <version>6.5.0.Final</version>
         </dependency>
 
-        <!--
         <dependency>
             <groupId>org.hibernate.javax.persistence</groupId>
             <artifactId>hibernate-jpa-2.1-api</artifactId>
             <version>1.0.2.Final</version>
         </dependency>
-        -->
         
         <!-- would like to update hibernate-validator to the latest (7.0.1.Final) but we have lots
              of validation exceptions that occur at query-time with the new library -->
@@ -260,6 +258,18 @@
             <version>6.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>6.1.0-M2</version>
+            <scope>provided</scope>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+            <version>5.3.1</version>
+        </dependency>
         
         <dependency>
             <groupId>org.apache.tomcat</groupId>
