--- a/chpl/chpl-api/pom.xml
+++ b/chpl/chpl-api/pom.xml
@@ -11,7 +11,7 @@
     <name>CHPL api</name>
 
     <properties>
-      <org.springdoc.version>1.7.0</org.springdoc.version>
+      <org.springdoc.version>1.8.0</org.springdoc.version>
     </properties>
 
     <dependencies>
@@ -46,6 +46,7 @@
             <artifactId>spring-security-web</artifactId>
         </dependency>
         <!-- springboot needed for springdoc (swagger) -->
+        
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
@@ -56,12 +57,19 @@
             <artifactId>spring-boot</artifactId>
             <version>${org.springboot.version}</version>
         </dependency>
+        <!--
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-webmvc-core</artifactId>
             <version>${org.springdoc.version}</version>
         </dependency>
-
+        -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+        
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
@@ -83,7 +91,6 @@
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
             <version>6.1.0-M2</version>
-            <scope>provided</scope>
         </dependency>
 
 
