--- a/chpl/chpl-service/pom.xml
+++ b/chpl/chpl-service/pom.xml
@@ -31,7 +31,7 @@
       <spring.data.redis.version>3.1.0</spring.data.redis.version>
       <redisson.version>3.21.3</redisson.version>
       <ff4j.store.redis.version>2.0.0</ff4j.store.redis.version>
-      <org.springdoc.version>1.7.0</org.springdoc.version>
+      <org.springdoc.version>1.8.0</org.springdoc.version>
     </properties>
 
     <dependencies>
@@ -273,7 +273,7 @@
         
         <dependency>
             <groupId>org.apache.tomcat</groupId>
-            <version>9.0.88</version>
+            <version>10.1.23</version>
             <artifactId>tomcat-jasper-el</artifactId>
         </dependency>
         <dependency>
@@ -339,7 +339,7 @@
         <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-dbcp</artifactId>
-            <version>9.0.88</version>
+            <version>10.1.23</version>
         </dependency>
 
         <!-- Enhanced stream functions -->
@@ -409,11 +409,12 @@
         <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-catalina</artifactId>
-            <version>9.0.88</version>
+            <version>10.1.23</version>
             <scope>provided</scope>
         </dependency>
 
         <!-- Sprng Doc (Swagger) -->
+        
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
@@ -424,10 +425,17 @@
             <artifactId>spring-boot</artifactId>
             <version>${org.springboot.version}</version>
         </dependency>
+        <!--
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-webmvc-core</artifactId>
             <version>${org.springdoc.version}</version>
+        </dependency>
+        -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
+            <version>2.5.0</version>
         </dependency>
 
         <dependency>
