--- a/chpl/chpl-service/pom.xml
+++ b/chpl/chpl-service/pom.xml
@@ -28,10 +28,10 @@
       <postgresql.version>42.7.2</postgresql.version>
       <quartz.version>2.5.0-rc1</quartz.version>
       <zxcvbn.version>1.7.0</zxcvbn.version>
-      <spring.data.redis.version>3.1.0</spring.data.redis.version>
+      <spring.data.redis.version>3.2.5</spring.data.redis.version>
       <redisson.version>3.21.3</redisson.version>
       <ff4j.store.redis.version>2.0.0</ff4j.store.redis.version>
-      <org.springdoc.version>1.8.0</org.springdoc.version>
+      <org.springdoc.version>2.5.0</org.springdoc.version>
     </properties>
 
     <dependencies>
@@ -435,7 +435,7 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
-            <version>2.5.0</version>
+            <version>${org.springdoc.version}</version>
         </dependency>
 
         <dependency>
