--- a/chpl/chpl-service/pom.xml
+++ b/chpl/chpl-service/pom.xml
@@ -99,12 +99,19 @@
             <version>6.5.0.Final</version>
         </dependency>
 
+        <!--
         <dependency>
-            <groupId>org.hibernate.javax.persistence</groupId>
+            <groupId>org.hibernate.jakarta.persistence</groupId>
             <artifactId>hibernate-jpa-2.1-api</artifactId>
             <version>1.0.2.Final</version>
         </dependency>
-        
+        -->
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+            <version>2.2</version>
+        </dependency>
+
         <!-- would like to update hibernate-validator to the latest (7.0.1.Final) but we have lots
              of validation exceptions that occur at query-time with the new library -->
         <!--
