--- a/chpl/chpl-api/pom.xml
+++ b/chpl/chpl-api/pom.xml
@@ -114,7 +114,7 @@
         <dependency>
             <groupId>org.ff4j</groupId>
             <artifactId>ff4j-web</artifactId>
-            <version>${ff4j.version}</version>
+            <version>2.0.0</version>
             <exclusions>
               <exclusion>
                 <groupId>commons-io</groupId>
