feat: Include intended subject in email sent report
[#OCD-4522]

--- a/chpl/chpl-resources/src/main/resources/email.properties
+++ b/chpl/chpl-resources/src/main/resources/email.properties
@@ -357,7 +357,7 @@ developer.missingAttestationChangeRequest.report.salutation=Hello %s,
 developer.missingAttestationChangeRequest.report.paragraph=Emails were sent to the following developers:
 
 #Developer Messaging Status Email
-developer.messaging.report.subject=Developer Messages Sent Report
+developer.messaging.report.subject=%s - Emails Sent Report
 developer.messaging.report.salutation=Hello %s,
 developer.messaging.report.paragraph=Emails were sent to the following developers:
 
