feat!: Deprecate developer status history; add status start/end dates
[#OCD-4554]

--- a/chpl/chpl-resources/src/main/resources/errors.properties
+++ b/chpl/chpl-resources/src/main/resources/errors.properties
@@ -70,7 +70,7 @@ version.split.notAllowedMultipleAcbs=Version split involves multiple ONC-ACBs, w
 
 #developer errors
 developer.notFound=Developer not found.
-developer.notActive=The developer %s must have a status of Active.
+developer.notBannedOrSuspended=The developer %s must not be banned or suspended.
 developer.join.missingDeveloperIds=At least one developer ID must be included in the request body to join developer.
 developer.join.duplicateChplProductNumbers=Joining these developers would cause non-unique CHPL Product Numbers %s and %s.
 developer.split.missingNewDeveloperProducts=At least one product is required to move to the new developer.
@@ -80,12 +80,13 @@ developer.split.newAndOldDeveloperRequired=Both a new and old developer must be 
 developer.split.notAllowedMultipleAcbs=Developer split involves multiple ONC-ACBs, which requires additional approval. Please contact ONC.
 developer.update.dupChplProdNbrs=Update would cause non-unique CHPL Product Numbers. (%s and %s)
 developer.noStatusFound=The developer %s cannot be updated since it's current status cannot be determined.
-developer.notActiveNotAdminCantChangeStatus=User %s does not have ROLE_ADMIN or ROLE_ONC and cannot change developer %s because its status is not Active.
+developer.bannedOrSuspendedNotAdminCantChangeStatus=User %s does not have ROLE_ADMIN or ROLE_ONC and cannot change developer %s because it is currently banned or suspended.
 developer.notActiveNotAdminCantSplit=User %s does not have ROLE_ADMIN or ROLE_ONC and cannot split developer %s because its status is not Active.
 developer.statusChangeNotAllowedWithoutAdmin=User cannot change developer status to %s without ROLE_ADMIN.
 developer.statusHistoryChangeNotAllowedWithoutAdmin=User without ROLE_ADMIN is not authorized to change developer status history.
 developer.statusChangeNotAllowedWithoutAdmin=User without ROLE_ADMIN is not authorized to change developer status history.
 developer.statusAutomaticallyChanged=ONC Terminated.
+developer.status.datesOverlap=Some developer status time periods overlap. Please check the developer status history.
 developer.missingReasonForBan=A reason must be given for any developer status of %s.
 developer.updateStatus.statusNotFound=Could not find status with name %s. Cannot insert this status history entry for developer with id %s.
 developer.updateStatus.missingData=Developer Status name and date must be provided but at least one was not found; cannot insert this status history for developer with id %s.
@@ -106,8 +107,6 @@ developer.selfDeveloper.missing=Self developer value is missing.
 developer.selfDeveloper.invalid=Self developer value %s is invalid. It must be true or false.
 developer.websiteRequired=Developer website is required.
 developer.websiteIsInvalid=Developer website is improperly formed.
-developer.status.noCurrent=The developer must have a current status specified.
-developer.status.notActiveFirst=The initial developer status must be 'Active' but is '%s'.
 developer.status.duplicateStatus=The status '%s' cannot be listed twice in a row.
 listing.developer.noStatusFound.noUpdate=The current status of the developer %s cannot be determined. A developer must be listed as Active in order to update certified products belonging to it.
 listing.developer.notActive.noUpdate=The developer %s has a status of %s. Certified products belonging to this developer cannot be updated until its status returns to Active.
