feat!: Deprecate developer statusEvents in favor of statuses
Statuses include a start date and end date in LocalDate format.

[#OCD-4554]

--- a/chpl/chpl-resources/src/main/resources/errors.properties
+++ b/chpl/chpl-resources/src/main/resources/errors.properties
@@ -50,8 +50,7 @@ product.doesNotExist=No product with ID %s exists in the system.
 product.nameRequired=A product name is required.
 product.ownerRequired=A product owner is required.
 product.ownerMustExist=An owner with ID %s was specified for the product but that developer does not exist.
-product.ownerMustBeActive=The product owner must be Active. Currently, the product owner has a status of '%s'.
-product.ownerStatusMustExist=The product '%s' cannot be created since the status of developer '%s' cannot be determined.
+product.ownerMustNotBeBannedOrSuspended=The product owner must not be banned or suspended. Currently, the product owner has a status of '%s'.
 product.ownerHistory.notSameDay=Only one product owner change is allowed per day.
 product.ownerHistory.sameOwner=The same developer cannot have two contiguous product ownership history entries.
 product.ownerHistory.cannotTransferDevelopersOnlyProduct=%s has no other products so this product cannot be transferred. Please contact ONC if this is needed.
@@ -79,18 +78,13 @@ developer.split.requestMismatch=The developer ID on the URL does not match the d
 developer.split.newAndOldDeveloperRequired=Both a new and old developer must be provided in the request body to perform a split.
 developer.split.notAllowedMultipleAcbs=Developer split involves multiple ONC-ACBs, which requires additional approval. Please contact ONC.
 developer.update.dupChplProdNbrs=Update would cause non-unique CHPL Product Numbers. (%s and %s)
-developer.noStatusFound=The developer %s cannot be updated since it's current status cannot be determined.
 developer.bannedOrSuspendedNotAdminCantChangeStatus=User %s does not have ROLE_ADMIN or ROLE_ONC and cannot change developer %s because it is currently banned or suspended.
-developer.notActiveNotAdminCantSplit=User %s does not have ROLE_ADMIN or ROLE_ONC and cannot split developer %s because its status is not Active.
 developer.statusChangeNotAllowedWithoutAdmin=User cannot change developer status to %s without ROLE_ADMIN.
 developer.statusHistoryChangeNotAllowedWithoutAdmin=User without ROLE_ADMIN is not authorized to change developer status history.
 developer.statusChangeNotAllowedWithoutAdmin=User without ROLE_ADMIN is not authorized to change developer status history.
 developer.statusAutomaticallyChanged=ONC Terminated.
 developer.status.datesOverlap=Some developer status time periods overlap. Please check the developer status history.
 developer.missingReasonForBan=A reason must be given for any developer status of %s.
-developer.updateStatus.statusNotFound=Could not find status with name %s. Cannot insert this status history entry for developer with id %s.
-developer.updateStatus.missingData=Developer Status name and date must be provided but at least one was not found; cannot insert this status history for developer with id %s.
-developer.updateStatus.idNotFound=No developer status history event was found with id %s.
 developer.nameRequired=A developer name is required.
 developer.nameNotUnique=The developer name must be unique and another developer with this name already exists.
 developer.addressRequired=An address is required for the developer.
@@ -108,12 +102,9 @@ developer.selfDeveloper.invalid=Self developer value %s is invalid. It must be t
 developer.websiteRequired=Developer website is required.
 developer.websiteIsInvalid=Developer website is improperly formed.
 developer.status.duplicateStatus=The status '%s' cannot be listed twice in a row.
-listing.developer.noStatusFound.noUpdate=The current status of the developer %s cannot be determined. A developer must be listed as Active in order to update certified products belonging to it.
-listing.developer.notActive.noUpdate=The developer %s has a status of %s. Certified products belonging to this developer cannot be updated until its status returns to Active.
-listing.developer.notActiveOrBanned.noUpdate=The developer %s has a status of %s. Certified products belonging to this developer cannot be updated until its status returns to %s or %s.
-listing.developer.noStatusFound.noCreate=The current status of the developer %s cannot be determined. A developer must be listed as Active in order to create certified products belonging to it.
-listing.developer.notActive.noCreate=The developer %s has a status of %s. Certified products belonging to this developer cannot be created until its status returns to Active.
-listing.developer.notActiveOrBanned.noCreate=The developer %s has a status of %s. Certified products belonging to this developer cannot be created until its status returns to %s or %s.
+listing.developer.bannedOrSuspended.noUpdate=The developer %s has a status of %s. Certified products belonging to this developer cannot be updated.
+listing.developer.suspended.noUpdate=The developer %s has a status of %s. Certified products belonging to this developer cannot be updated.
+listing.developer.bannedOrSuspended.noCreate=The developer %s has a status of %s. Certified products belonging to this developer cannot be created.
 listing.developer.userAndSystemMismatch=The user-entered developer %s of '%s' does not match the system value of '%s'.
 listing.developer.notFound=No developer with the name '%s' was found in the system.
 
@@ -959,7 +950,7 @@ changeRequest.statusType.notExists=Change request's current status type does not
 changeRequest.statusType.invalid=Change request's current status type is not valid.
 changeRequest.developer.required=Developer is required.
 changeRequest.developer.invalid=Developer does not exist.
-changeRequest.developer.notActive=Developer is not Active.
+changeRequest.developer.bannedOrSuspended=Developer is banned or suspended.
 changeRequest.details.cannotDetermineType=Cannot determine the intended type of the change request details.
 changeRequest.demographics.invalid=Developer change details may not be blank.
 changeRequest.demographics.selfDeveloper.missing=Self developer value is missing.
