--- a/chpl/chpl-api/pom.xml
+++ b/chpl/chpl-api/pom.xml
@@ -169,6 +169,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                   <release>${java.version}</release>
+                  <compilerArgs>
+                      <arg>-parameters</arg>
+                   </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
