--- a/chpl/chpl-service/pom.xml
+++ b/chpl/chpl-service/pom.xml
@@ -491,6 +491,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <release>${java.version}</release>
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
