--- a/chpl/chpl-resources/src/main/resources/environment.properties
+++ b/chpl/chpl-resources/src/main/resources/environment.properties
@@ -14,6 +14,7 @@
 ######  CHPL APPLICATION SETTINGS  ######
 #ENVIRONMENT DEPENDENT
 chplUrlBegin=https://chpl.healthit.gov
+developerUrlPart=/#/organizations/developer/%s
 jndiName=java:comp/env/jdbc/openchpl
 persistenceUnitName=openchpl
 api.version=44.3.0
