feat!: Create SBUL downloadable file after collecting data
[#OCD-4600]

--- a/chpl/chpl-resources/src/main/resources/environment.properties
+++ b/chpl/chpl-resources/src/main/resources/environment.properties
@@ -163,6 +163,7 @@ surveillanceBasicReportName=surveillance-basic-report
 surveillanceNonconformitiesReportName=surveillance-with-nonconformities
 svapReportName=chpl-svap
 directReviewsReportName=direct-reviews
+serviceBaseUrlListReportName=service-base-url-list
 #schema download file properties
 schemaCsv2011Name=2011 Listing CSV Data Dictionary.csv
 schemaCsv2014Name=2014 Listing CSV Data Dictionary.csv
@@ -171,6 +172,7 @@ schemaSurveillanceName=Surveillance and Nonconformity CSV Data Dictionary.csv
 schemaBasicSurveillanceName=Surveillance (basic) CSV Data Dictionary.csv
 schemaSvapReportName=SVAP Summary CSV Data Dictionary.csv
 schemaDirectReviewsName=Direct Review CSV Data Dictionary.csv
+serviceBaseUrlListSchemaName=Service Base Url List CSV Data Dictionary.csv
 #############################################################
 
 ######  Criteria Related to CQMs  ######
