feat: add check for password strength
OCD-4602

--- a/chpl/chpl-resources/src/main/resources/errors.properties
+++ b/chpl/chpl-resources/src/main/resources/errors.properties
@@ -9,6 +9,7 @@
 auth.loginNotAllowed=Bad username and password combination or account is locked / disabled.
 auth.changePasswordRequired=The user is required to change their password on next login.
 auth.accountNotConfirmed=Account's email address has not been confirmed.
+auth.passwordComplexity=Password does not meet minimum security requirements.
 
 #general access denied
 access.denied=Access is denied
