feat: Create inactive products CSV
[#OCD-4609]

--- a/chpl/chpl-resources/src/main/resources/email.properties
+++ b/chpl/chpl-resources/src/main/resources/email.properties
@@ -377,6 +377,7 @@ businessRulesOverride.tableHeader=Overridden Business Rules
 #Inactive Products Report email
 inactiveProductsReport.subject=Inactive Products Report
 inactiveProductsReport.body= %s inactive products were found. Please see the attached report.
+inactiveProductsReport.fileName=inactive-products-report
 
 #Subscription Emails
 subscriptions.manage=You may unsubscribe from a particular notification by visiting the \
