--- a/chpl/chpl-resources/src/main/resources/email.properties
+++ b/chpl/chpl-resources/src/main/resources/email.properties
@@ -374,10 +374,10 @@ businessRulesOverride.subject=%s - Business Rules Overridden
 businessRulesOverride.body=The following rules were overridden when saving listing %s by %s at %s.
 businessRulesOverride.tableHeader=Overridden Business Rules
 
-#Inactive Products Report email
-inactiveProductsReport.subject=Inactive Products Report
-inactiveProductsReport.body= %s inactive products were found. Please see the attached report.
-inactiveProductsReport.fileName=inactive-products-report
+#Inactive Developers And Products Report email
+inactiveDevelopersAndProductsReport.subject=Inactive Developers and Products Report
+inactiveDevelopersAndProductsReport.body= %s inactive products were found. Please see the attached report.
+inactiveDevelopersAndProductsReport.fileName=inactive-developers-and-products-report
 
 #Subscription Emails
 subscriptions.manage=You may unsubscribe from a particular notification by visiting the \
