feat: add endpoint to return a report url
OCD-4518

--- a/chpl/chpl-resources/src/main/resources/environment.properties
+++ b/chpl/chpl-resources/src/main/resources/environment.properties
@@ -339,3 +339,8 @@ downloadActiveMinute=0
 ######      Updated Criteria Status Report     ######
 updatedCriteriaStatusReportTemplate=UpdatedCriteriaStatusReport.xlsx
 ####################################
+
+
+######    Power BI Report URLS     ######
+reportURL.uniqueProducts=DEFAULT NOT KNOWN UNTIL WE GO TO PROD
+#########################################
