feat: use a map in the env properties to store report urls
OCD-4518

--- a/chpl/chpl-resources/src/main/resources/environment.properties
+++ b/chpl/chpl-resources/src/main/resources/environment.properties
@@ -342,5 +342,5 @@ updatedCriteriaStatusReportTemplate=UpdatedCriteriaStatusReport.xlsx
 
 
 ######    Power BI Report URLS     ######
-reportURL.uniqueProducts=DEFAULT NOT KNOWN UNTIL WE GO TO PROD
+reportUrls={'UniqueProducts': 'ENVIRONMENT DEPENDENT'}
 #########################################
