feat!: Allow disabling of sending emails throughout the app
[#OCD-4622]

--- a/chpl/chpl-resources/src/main/resources/environment.properties
+++ b/chpl/chpl-resources/src/main/resources/environment.properties
@@ -62,6 +62,7 @@ azure.tenantId=SECRET
 emailRetryIntervalInMinutes=30
 # A value of -1 will continue to try sending email indefinitely
 emailRetryAttempts=48
+sendEmails=true
 #############################
 
 ######  RATE LIMITING INTERCEPTOR CONFIG VALUES  ######
