feat: throw exception if url does not match body data
OCD-4545

--- a/chpl/chpl-resources/src/main/resources/errors.properties
+++ b/chpl/chpl-resources/src/main/resources/errors.properties
@@ -17,6 +17,7 @@ notImplemented=Not yet implemented.
 
 #general validation error
 deprecated.field.update=The deprecated field "%s" will not be used when updating anything. That field has been replaced with "%s".
+url.body.notMatch=The body for the request is not applicable for the URL.
 
 #acb errors
 acb.notFound=Certification body not found.
