--- a/chpl/chpl-resources/src/main/resources/email.properties
+++ b/chpl/chpl-resources/src/main/resources/email.properties
@@ -419,3 +419,11 @@ futureCertificationStatusUsed.body=<h2>Future Certification Status Feature Used 
 <h4>Activity performed by %s </p> \
 <p>%s (ID %s) was set to have a new certification status on %s.</p> \
 <p>The activity ID for this action is %s.</p>
+
+#Cognito Forgot password email
+cognito.forgotPassword.subject=Request to change CHPL password
+cognito.forgotPassword.heading=Forgot CHPL Account Password
+cognito.forgotPassword.paragraph1=We have received a password change request for your CHPL account.
+cognito.forgotPassword.paragraph2=Click <a href='%s'>here</a> to change your password.  This link is valid for 1 hour.
+cognito.forgotPassword.paragraph3=If the above link does not work for you, copy and paste the following into your browser's address bar:</br>%s 
+cognito.forgotPassword.paragraph4=If you didn't request a password change, you can ignore this message and continue to use your current password.
