fix: Return helpful error message if dev msg sent with no body/subj
[#OCD-4569]

--- a/chpl/chpl-resources/src/main/resources/errors.properties
+++ b/chpl/chpl-resources/src/main/resources/errors.properties
@@ -107,6 +107,7 @@ listing.developer.suspended.noUpdate=The developer %s has a status of %s. Certif
 listing.developer.bannedOrSuspended.noCreate=The developer %s has a status of %s. Certified products belonging to this developer cannot be created.
 listing.developer.userAndSystemMismatch=The user-entered developer %s of '%s' does not match the system value of '%s'.
 listing.developer.notFound=No developer with the name '%s' was found in the system.
+developer.messaging.missingSubjectOrBody=The message subject and body are both required.
 
 #system-specific developer errors
 system.developer.pendingACBNameNullOrEmpty=Error retrieving the pending certified product ONC-ACB name. Please upload a fully valid listing.
