--- a/chpl/chpl-resources/src/main/resources/environment.properties
+++ b/chpl/chpl-resources/src/main/resources/environment.properties
@@ -340,3 +340,8 @@ downloadActiveMinute=0
 ######      Updated Criteria Status Report     ######
 updatedCriteriaStatusReportTemplate=UpdatedCriteriaStatusReport.xlsx
 ####################################
+
+
+######    Power BI Report URLS     ######
+reportUrls={'UniqueProducts': 'ENVIRONMENT DEPENDENT'}
+#########################################
